Bug 259805 - REGRESSION (265825@main): Safari CPU usage in SurferJoannaProxy increased by 5.8%
Summary: REGRESSION (265825@main): Safari CPU usage in SurferJoannaProxy increased by ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Process Model (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Dean Jackson
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-08-03 15:37 PDT by Dean Jackson
Modified: 2023-08-03 16:05 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dean Jackson 2023-08-03 15:37:38 PDT
REGRESSION (265825@main): Safari CPU usage in SurferJoannaProxy increased by 5.8%
Comment 1 Dean Jackson 2023-08-03 15:37:50 PDT
<rdar://problem/111986083>
Comment 2 Dean Jackson 2023-08-03 15:41:53 PDT
Pull request: https://github.com/WebKit/WebKit/pull/16370
Comment 3 EWS 2023-08-03 16:05:44 PDT
Committed 266557@main (ab6f0338a00f): <https://commits.webkit.org/266557@main>

Reviewed commits have been landed. Closing PR #16370 and removing active labels.