Cherry-pick 54ed588a4ca8. rdar://problem/113604869

Cherry-pick ab6f0338a00f. rdar://problem/111986083

        REGRESSION (265825@main): Safari CPU usage in SurferJoannaProxy increased by 5.8%
        https://bugs.webkit.org/show_bug.cgi?id=259805
        rdar://111986083

        Reviewed by Matt Woodrow.

        The fix in 265825@main caused a slight performance regression. We can
        now back out most of it, thanks to a change in CoreAnimation.

        The thing we don't restore is the CATransaction.

        * Source/WebCore/PAL/pal/spi/cocoa/QuartzCoreSPI.h:
        * Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.mm:
        (WebKit::RemoteLayerTreeDrawingAreaProxy::commitLayerTree):

        Canonical link: https://commits.webkit.org/266557@main

    Identifier: 265870.303@safari-7616.1.27.10-branch

Identifier: 265870.313@safari-7616-branch