Source/WebCore/PAL/pal/spi/cocoa/QuartzCoreSPI.h
@@ -185,7 +185,6 @@ typedef enum {
     kCATransactionPhasePreLayout,
     kCATransactionPhasePreCommit,
     kCATransactionPhasePostCommit,
-    kCATransactionPhasePostSynchronize = 5,
     kCATransactionPhaseNull = ~0u
 } CATransactionPhase;
 
